--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,4 @@ RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond $1 !^(index\.php|images|css|public|robots\.txt)
-RewriteRule ^(.*)$ /condo/index.php?/$1 [QSA,L]
+RewriteRule ^(.*)$ /condominium/index.php?/$1 [QSA,L]
